# image_illumination_corrector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: architecture.md  methods-guide.md  ubuntu-run.md
src/image_illumination_corrector/: __init__.py  __main__.py  app.py  ui.py
