[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-illumination-corrector"
version = "0.1.0"
description = "Interactive desktop tool for vignette reduction and image illumination correction."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
]

[project.scripts]
image-illumination-corrector = "image_illumination_corrector.app:main"

[tool.setuptools.packages.find]
include = ["image_illumination_corrector*"]

[dependency-groups]
dev = [
    "pyinstaller (>=6.19.0,<7.0.0)"
]
